# src/assets/swagger.yaml
@@ -247,7 +247,7 @@ paths:
             type:                  "string"
         405:
           description:             "Invalid input"
-      x-swagger-router-controller: "Editor"  
+      x-swagger-router-controller: "Editor"
   /exercises/{id}/reorder:
     post:
       tags:
@@ -417,6 +417,119 @@ paths:
           items:
             type:                  "integer"
             format:                "int32"
+      responses:
+        200:
+          description:             "OK"
+          schema:
+            type:                  "string"
+        405:
+          description:             "Invalid input"
+      x-swagger-router-controller: "Editor"
+  /templates:
+    get:
+      tags:
+      - "Editor"
+      description:                 "Returns information about templates."
+      operationId:                 "templatesGET"
+      produces:
+      - "application/json"
+      parameters:                  []
+      responses:
+        200:
+          description:             "An array of templates"
+          schema:
+            type:                  "array"
+            items:
+              $ref:                "#/definitions/Template"
+        default:
+          description:             "Unexpected error"
+          schema:
+            $ref:                  "#/definitions/Error"
+      x-swagger-router-controller: "Editor"
+    post:
+      tags:
+      - "Editor"
+      description:                 "Adds a new template."
+      operationId:                 "templatesPOST"
+      produces:
+      - "application/json"
+      parameters:
+      - in:                        "body"
+        name:                      "body"
+        description:               "Template with default ID to be added"
+        required:                  true
+        schema:
+          $ref:                    "#/definitions/Template"
+      responses:
+        200:
+          description:             "OK"
+          schema:
+            type:                  "integer"
+            format:                "int32"
+        405:
+          description:             "Invalid input"
+      x-swagger-router-controller: "Editor"
+    put:
+      tags:
+      - "Editor"
+      description:                 "Edits a template."
+      operationId:                 "templatesPUT"
+      produces:
+      - "application/json"
+      parameters:
+      - in:                        "body"
+        name:                      "body"
+        description:               "Template with given ID to be updated"
+        required:                  true
+        schema:
+          $ref:                    "#/definitions/Template"
+      responses:
+        200:
+          description:             "OK"
+          schema:
+            type:                  "string"
+        405:
+          description:             "Invalid input"
+      x-swagger-router-controller: "Editor"
+  /templates/{id}:
+    get:
+      tags:
+      - "Editor"
+      description:                 "Returns information about the template of a specified ID."
+      operationId:                 "templatesIdGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name:                      "id"
+        in:                        "path"
+        description:               "ID of template"
+        required:                  true
+        type:                      "integer"
+        format:                    "int32"
+      responses:
+        200:
+          description:             "A template"
+          schema:
+            $ref:                  "#/definitions/Template"
+        default:
+          description:             "Unexpected error"
+          schema:
+            $ref:                  "#/definitions/Error"
+      x-swagger-router-controller: "Editor"
+    delete:
+      tags:
+      - "Editor"
+      description:                 "Deletes a template."
+      operationId:                 "templatesIdDELETE"
+      produces:
+      - "application/json"
+      parameters:
+      - name:                      "id"
+        in:                        "path"
+        description:               "ID of template"
+        required:                  true
+        type:                      "integer"
+        format:                    "int32"
       responses:
         200:
           description:             "OK"
@@ -610,6 +723,22 @@ definitions:
       description:
         type:                      "string"
         description:               "Description of lesson"
+  Template:
+    type:                          "object"
+    properties:
+      id:
+        type:                      "integer"
+        format:                    "int32"
+        description:               "ID of template"
+      name:
+        type:                      "string"
+        description:               "Name of template"
+      content:
+        type:                      "string"
+        description:               "Content of template"
+      description:
+        type:                      "string"
+        description:               "Description of template"
   Asset:
     type:                          "object"
     properties:
